@@ -24,21 +24,16 @@
 package com.janilla.conduit.backend;
 
 import java.io.IOException;
-import java.io.UncheckedIOException;
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.Map;
-import java.util.Objects;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
-import java.util.stream.Stream;
 
-import com.janilla.io.IO;
+import com.janilla.persistence.Crud.Page;
 import com.janilla.persistence.Persistence;
 import com.janilla.reflect.Parameter;
 import com.janilla.reflect.Reflection;
@@ -67,12 +62,16 @@ public class ArticleApi {
 	public Object create(Form form, User user) throws IOException {
 		var s = toSlug(form.article.title);
 		validate(null, s, form.article);
+
 		var a = new Article();
 		Reflection.copy(form.article, a);
 		a.setSlug(s);
 		a.setCreatedAt(Instant.now());
 		a.setAuthor(user.getId());
-		persistence.getDatabase().performTransaction(() -> persistence.getCrud(Article.class).create(a));
+
+		var c = persistence.getCrud(Article.class);
+		persistence.getDatabase().performTransaction(() -> c.create(a));
+
 		return Map.of("article", a);
 	}
 
@@ -80,32 +79,31 @@ public class ArticleApi {
 	public Object update(String slug, Form form, User user) throws IOException {
 		var s = toSlug(form.article.title);
 		validate(slug, s, form.article);
+
 		var c = persistence.getCrud(Article.class);
-		var i = new long[1];
-		c.indexAccept("slug", slug, x -> i[0] = x.findFirst().getAsLong());
-		var a = new Article[1];
-		persistence.getDatabase().performTransaction(() -> a[0] = c.update(i[0], x -> {
+		var i = c.find("slug", slug);
+		var a = i >= 0 ? persistence.getDatabase().performTransaction(() -> c.update(i, x -> {
 			Reflection.copy(form.article, x);
 			x.setSlug(s);
 			x.setUpdatedAt(Instant.now());
-		}));
-		return Map.of("article", a[0]);
+		})) : null;
+
+		return Collections.singletonMap("article", a);
 	}
 
 	@Handle(method = "DELETE", uri = "/api/articles/([^/]*)")
 	public void delete(String slug) throws IOException {
 		var c = persistence.getCrud(Article.class);
-		var i = new long[1];
-		c.indexAccept("slug", slug, x -> i[0] = x.findFirst().getAsLong());
-		persistence.getDatabase().performTransaction(() -> c.delete(i[0]));
+		var i = c.find("slug", slug);
+		if (i >= 0)
+			persistence.getDatabase().performTransaction(() -> c.delete(i));
 	}
 
 	@Handle(method = "GET", uri = "/api/articles/([^/]*)")
 	public Object get(String slug) throws IOException {
 		var c = persistence.getCrud(Article.class);
-		var i = new long[1];
-		c.indexAccept("slug", slug, x -> i[0] = x.findFirst().getAsLong());
-		var a = c.read(i[0]);
+		var i = c.find("slug", slug);
+		var a = i >= 0 ? c.read(i) : null;
 		return Collections.singletonMap("article", a);
 	}
 
@@ -115,7 +113,7 @@ public class ArticleApi {
 			throws IOException {
 		class A {
 
-			Object[] l;
+			Object[] o;
 
 			long c;
 		}
@@ -124,82 +122,45 @@ public class ArticleApi {
 			var c = persistence.getCrud(User.class);
 			var d = persistence.getDatabase();
 			if (tag != null && !tag.isBlank())
-				d.performOnIndex("Article.tagList", i -> {
-					a.l = i.list(tag).skip(skip).limit(limit).toArray();
-					a.c = i.count(tag);
+				d.performOnIndex("Article.tagList", x -> {
+					a.o = x.list(tag).skip(skip).limit(limit).toArray();
+					a.c = x.count(tag);
 				});
 			else if (author != null && !author.isBlank()) {
-				var i = new long[1];
-				c.indexAccept("username", author, x -> i[0] = x.findFirst().getAsLong());
-				d.performOnIndex("Article.author", j -> {
-					a.l = j.list(i[0]).skip(skip).limit(limit).toArray();
-					a.c = j.count(i[0]);
-				});
+				var u = c.find("username", author);
+				if (u >= 0)
+					d.performOnIndex("Article.author", x -> {
+						a.o = x.list(u).skip(skip).limit(limit).toArray();
+						a.c = x.count(u);
+					});
 			} else if (favorited != null && !favorited.isBlank()) {
-				var i = new long[1];
-				c.indexAccept("username", favorited, x -> i[0] = x.findFirst().getAsLong());
-				d.performOnIndex("User.favoriteList", j -> {
-					a.l = j.list(i[0]).skip(skip).limit(limit).toArray();
-					a.c = j.count(i[0]);
-				});
+				var u = c.find("username", favorited);
+				if (u >= 0)
+					d.performOnIndex("User.favoriteList", x -> {
+						a.o = x.list(u).skip(skip).limit(limit).toArray();
+						a.c = x.count(u);
+					});
 			} else
-				d.performOnIndex("Article", i -> {
-					a.l = i.list(null).skip(skip).limit(limit).toArray();
-					a.c = i.count(null);
+				d.performOnIndex("Article", x -> {
+					a.o = x.list(null).skip(skip).limit(limit).toArray();
+					a.c = x.count(null);
 				});
 		}
 
 		var c = persistence.getCrud(Article.class);
-		return Map.of("articles", Arrays.stream(a.l).map(x -> {
-			try {
-				return c.read((Long) ((Object[]) x)[1]);
-			} catch (IOException e) {
-				throw new UncheckedIOException(e);
-			}
-		}), "articlesCount", a.c);
+		var i = Arrays.stream(a.o).mapToLong(x -> (Long) ((Object[]) x)[1]).toArray();
+		var r = c.read(i);
+
+		return Map.of("articles", r, "articlesCount", a.c);
 	}
 
 	@Handle(method = "GET", uri = "/api/articles/feed")
 	public Object listFeed(@Parameter("skip") long skip, @Parameter("limit") long limit, User user) throws IOException {
-		class A {
-
-			Iterator<Object> l;
-
-			Object o;
-
-			long c;
-		}
-		var l = new ArrayList<A>();
-		var f = LongStream.builder();
-		persistence.getCrud(User.class).indexAccept("followList", user.getId(), x -> x.forEach(f::add));
-		persistence.getDatabase().performOnIndex("Article.author", x -> {
-			for (var y : f.build().toArray()) {
-				var a = new A();
-				a.l = x.list(y).iterator();
-				a.o = a.l.hasNext() ? a.l.next() : null;
-				a.c = x.count(y);
-				l.add(a);
-			}
-		});
-		IO.Supplier<Article> s = () -> {
-			var a = l.stream().max((a1, a2) -> {
-				var i1 = a1.o != null ? (Instant) ((Object[]) a1.o)[0] : null;
-				var i2 = a2.o != null ? (Instant) ((Object[]) a2.o)[0] : null;
-				return i1 != null ? (i2 != null ? i1.compareTo(i2) : 1) : (i2 != null ? -1 : 0);
-			}).orElse(null);
-			if (a == null || a.o == null)
-				return null;
-			var b = persistence.getCrud(Article.class).read((Long) ((Object[]) a.o)[1]);
-			a.o = a.l.hasNext() ? a.l.next() : null;
-			return b;
-		};
-		return Map.of("articles", Stream.iterate(s.get(), x -> {
-			try {
-				return s.get();
-			} catch (IOException e) {
-				throw new UncheckedIOException(e);
-			}
-		}).skip(skip).limit(limit).filter(Objects::nonNull), "articlesCount", l.stream().mapToLong(a -> a.c).sum());
+		var u = persistence.getCrud(User.class).performOnIndex("followList", user.getId(), LongStream::toArray);
+		var c = persistence.getCrud(Article.class);
+		var i = u.length > 0 ? Arrays.stream(u).boxed().toArray() : null;
+		var p = i != null ? c.filter("author", skip, limit, i) : Page.empty();
+		return Map.of("articles", c.read(p.ids()), "articlesCount", p.total());
 	}
 
 	@Handle(method = "POST", uri = "/api/articles/([^/]*)/comments")
@@ -208,16 +169,20 @@ public class ArticleApi {
 		if (v.isNotBlank("body", form.comment.body))
 			v.isSafe("body", form.comment.body);
 		v.orThrow();
-		var z = persistence.getCrud(Article.class);
-		var i = new long[1];
-		z.indexAccept("slug", slug, x -> i[0] = x.findFirst().getAsLong());
-		var a = z.read(i[0]);
+
+		var a = persistence.getCrud(Article.class).find("slug", slug);
+		if (a < 0)
+			throw new RuntimeException();
+
 		var c = new Comment();
 		Reflection.copy(form.comment, c);
 		c.setCreatedAt(Instant.now());
 		c.setAuthor(user.getId());
-		c.setArticle(a.getId());
-		persistence.getDatabase().performTransaction(() -> persistence.getCrud(Comment.class).create(c));
+		c.setArticle(a);
+
+		var d = persistence.getCrud(Comment.class);
+		persistence.getDatabase().performTransaction(() -> d.create(c));
+
 		return Map.of("comment", c);
 	}
 
@@ -233,18 +198,10 @@ public class ArticleApi {
 
 	@Handle(method = "GET", uri = "/api/articles/([^/]*)/comments")
 	public Object listComments(String slug) throws IOException {
-		var i = new long[1];
-		persistence.getCrud(Article.class).indexAccept("slug", slug, x -> i[0] = x.findFirst().getAsLong());
+		var i = persistence.getCrud(Article.class).performOnIndex("slug", slug, x -> (Long) x.findFirst().orElse(-1));
 		var c = persistence.getCrud(Comment.class);
-		var j = Stream.<Long>builder();
-		c.indexAccept("article", i[0], x -> x.forEach(j::add));
-		return Map.of("comments", j.build().map(x -> {
-			try {
-				return c.read(x);
-			} catch (IOException e) {
-				throw new UncheckedIOException(e);
-			}
-		}));
+		var j = c.performOnIndex("article", i, LongStream::toArray);
+		return Map.of("comments", c.read(j));
 	}
 
 	@Handle(method = "POST", uri = "/api/articles/([^/]*)/favorite")
@@ -252,18 +209,23 @@ public class ArticleApi {
 		if (user == null)
 			throw new NullPointerException("user=" + user);
 		var c = persistence.getCrud(Article.class);
+		var i = c.find("slug", slug);
+		if (i < 0)
+			throw new RuntimeException();
+		var a = c.read(i);
+
 		var d = persistence.getDatabase();
-		var i = new long[1];
-		c.indexAccept("slug", slug, x -> i[0] = x.findFirst().getAsLong());
-		var a = c.read(i[0]);
-		persistence.getDatabase().performTransaction(() -> {
-			d.performOnIndex("Article.favoriteList", j -> {
-				if (!j.add(i[0], user.getId()))
+		d.performTransaction(() -> {
+			d.performOnIndex("Article.favoriteList", x -> {
+				if (!x.add(i, user.getId()))
 					throw new RuntimeException();
 			});
-			d.performOnIndex("User.favoriteList", j -> j.add(user.getId(), new Object[] { a.getCreatedAt(), i[0] }));
+			d.performOnIndex("User.favoriteList", x -> {
+				x.add(user.getId(), new Object[] { a.getCreatedAt(), i });
+			});
 		});
-		return Map.of("article", i[0]);
+
+		return Map.of("article", i);
 	}
 
 	@Handle(method = "DELETE", uri = "/api/articles/([^/]*)/favorite")
@@ -271,18 +233,23 @@ public class ArticleApi {
 		if (user == null)
 			throw new NullPointerException("user=" + user);
 		var c = persistence.getCrud(Article.class);
+		var i = c.find("slug", slug);
+		if (i < 0)
+			throw new RuntimeException();
+		var a = c.read(i);
+
 		var d = persistence.getDatabase();
-		var i = new long[1];
-		c.indexAccept("slug", slug, x -> i[0] = x.findFirst().getAsLong());
-		var a = c.read(i[0]);
-		persistence.getDatabase().performTransaction(() -> {
-			d.performOnIndex("Article.favoriteList", j -> {
-				if (!j.remove(i[0], user.getId()))
+		d.performTransaction(() -> {
+			d.performOnIndex("Article.favoriteList", x -> {
+				if (!x.remove(i, user.getId()))
 					throw new RuntimeException();
 			});
-			d.performOnIndex("User.favoriteList", j -> j.remove(user.getId(), new Object[] { a.getCreatedAt(), i[0] }));
+			d.performOnIndex("User.favoriteList", x -> {
+				x.remove(user.getId(), new Object[] { a.getCreatedAt(), i });
+			});
 		});
-		return Map.of("article", i[0]);
+
+		return Map.of("article", i);
 	}
 
 	protected void validate(String slug1, String slug2, Form.Article article) throws IOException {
@@ -290,15 +257,8 @@ public class ArticleApi {
 		var c = persistence.getCrud(Article.class);
 		if (v.isNotBlank("title", article.title) && v.isNotTooLong("title", article.title, 100)
 				&& v.isSafe("title", article.title)) {
-			var i = Stream.<Long>builder();
-			c.indexAccept("slug", slug2, x -> x.forEach(i::add));
-			var a = i.build().map(x -> {
-				try {
-					return c.read(x);
-				} catch (IOException e) {
-					throw new UncheckedIOException(e);
-				}
-			}).filter(x -> !x.getSlug().equals(slug1)).findFirst().orElse(null);
+			var i = c.performOnIndex("slug", slug2, LongStream::toArray);
+			var a = c.read(i).filter(x -> !x.getSlug().equals(slug1)).findFirst().orElse(null);
 			v.isUnique("title", a);
 		}
 		if (v.isNotBlank("description", article.description) && v.isNotTooLong("description", article.description, 200)
